<resources>
    <string name="app_name">nodabba</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="password">password</string>
    <string name="remember_your_password">----------remember your password----------</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="email">email</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="Name">Name</string>
    <string name="create_your_n_account">create your\n Account</string>
    <string name="odo">TODO</string>
    <string name="login">login</string>
    <string name="remember_your_password1">----------remember your password----------</string>
    <string name="nodabba">Nodabba</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="about_us">About Us</string>
    <string name="share">Share</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="chat">chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terms_conditions"><![CDATA[terms&conditions]]></string>
    <string name="feedback">feedback</string>
    <string name="subscriptions">subscriptions</string>
    <string name="exit">exit</string>
    <string name="premium">premium</string>
    <string name="contact_us">contact us</string>
    <string name="add_account">Add Account</string>
    <string name="my_task">My Task</string>
    <string name="documents">documents</string>
    <string name="profile">profile</string>
    <string name="schedule">schedule</string>
    <string name="Home">Home</string>
</resources>